--- a/iredadmin-ose/templates/default/ldap/domains.html
+++ b/iredadmin-ose/templates/default/ldap/domains.html
@@ -43,7 +43,7 @@
 #}
 
 {# List all domains under control. #}
-<div class="main-content">
+<div class="main-frm">
     <form id="list_table" method="post" action="{{ctx.homepath}}/domains">
     <table id="domain_list" cellspacing="0">
         <thead>
