--- a/iredadmin-ose/templates/default/ldap/macros.html
+++ b/iredadmin-ose/templates/default/ldap/macros.html
@@ -168,7 +168,7 @@
 
 {% macro display_quota(value='') -%}
     <fieldset class="frm-group">
-        <legend class="group-legend"><strong>{{ _('Mail quota') }}</strong></legend>
+        <legend class="group-legend"><strong>{{ _('Quota') }}</strong></legend>
         <div class="sf-set">
             <div class="sf-box text required">
                 <label><span>{{ _('Quota (in MB)') }}</span></label>
