[admin] Code cleanup.

--- a/iredadmin-ose/templates/default/ldap/user_create.html
+++ b/iredadmin-ose/templates/default/ldap/user_create.html
@@ -23,7 +23,7 @@
         <div class="sf-set">
             <div class="sf-box text">
                 <label><span>{{ _('Mail address') }}</span></label>
-                <span class="fld-input"><input type="text" name="mail" size="25" />@
+                <span class="fld-input"><input type="text" name="username" size="25" />@
                     <select name="domainName">
                         {% for domain in domains %}
                             <option value="{{domain}}" {% if domain == domainName %}selected{%endif%}>{{domain}}</option>
