Add LDAP password scheme support: SSHA, PLAIN (plain text).

--- a/iredadmin-ose/templates/default/ldap/dashboard.html
+++ b/iredadmin-ose/templates/default/ldap/dashboard.html
@@ -15,8 +15,8 @@
 
     <h3>There are demos available of both two editions now:</h3>
     <ul>
-        <li>Open Source Edition: <a href="http://125.39.116.122/iredadmin-ose/">http://125.39.116.122/iredadmin-ose/</a></li>
-        <li>Full-featured Edition: <a href="http://125.39.116.122/iredadmin-ent/">http://125.39.116.122/iredadmin-ent/</a></li>
+        <li>Open Source Edition: <a href="http://demo.iredmail.org/iredadmin-ose/">http://demo.iredmail.org/iredadmin-ose/</a></li>
+        <li>Full-featured Edition: <a href="http://demo.iredmail.org/iredadmin-ent/">http://demo.iredmail.org/iredadmin-ent/</a></li>
     </ul>
 
 </div>
