Ability to delete users now.

--- a/iredadmin-ose/templates/default/ldap/admins.html
+++ b/iredadmin-ose/templates/default/ldap/admins.html
@@ -76,8 +76,8 @@ $("#admin_list").tablesorter( {
 
         <div class="frm-buttons">
             <span class="submit">
-                <input type="checkbox" name="checkall" id="checkall" />{{ _('Select all') }}
-                <input type="submit" name="save" value="{{ _('Delete') }}" onclick="return confirm('{{ _('Are you sure want to delete selected account(s)?') }}');" }}" />
+                <input type="checkbox" id="checkall" />{{ _('Select all') }}
+                <input type="submit" value="{{ _('Delete') }}" onclick="return confirm('{{ _('Are you sure want to delete selected account(s)?') }}');" }}" />
             </span>
         </div>
     </form>
