--- a/iredadmin-ose/templates/default/ldap/domain_create.html
+++ b/iredadmin-ose/templates/default/ldap/domain_create.html
@@ -8,9 +8,8 @@
 {% block title %}{{ _('Add new mail domain') }}{% endblock title %}
 
 {% block main %}
-
-<div id="brd-crumbs-top" class="crumbs gen-content">
-    <p><span class="crumblast">{{ _('Create new mail domain') }}</span></p>
+<div class="main-subhead">
+    <h2 class="hn"><span>{{ _('Create new mail domain') }}</span></h2>
 </div>
 
 <div class="main-frm">
