--- a/iredadmin-ose/templates/default/ldap/user_create.html
+++ b/iredadmin-ose/templates/default/ldap/user_create.html
@@ -10,8 +10,8 @@
 {% block title %}{{ _('Create new mail user') }}{% endblock title %}
 
 {% block main %}
-<div id="brd-crumbs-top" class="crumbs gen-content">
-    <p><span class="crumblast">{{ _('Create new mail user') }}</span></p>
+<div class="main-subhead">
+    <h2 class="hn"><span>{{ _('Create new mail user') }}</span></h2>
 </div>
 
 {# Display input field for adding new domain. #}
