--- a/iredadmin-ose/templates/default/ldap/users.html
+++ b/iredadmin-ose/templates/default/ldap/users.html
@@ -104,7 +104,7 @@ $("#user_list").tablesorter( {
     <div class="frm-buttons">
         <span class="submit">
             <input type="checkbox" id="checkall" />{{ _('Select all') }}
-            <input type="submit" value="{{ _('Delete') }}" onclick="return confirm('{{ _('Are you sure want to delete selected group(s)?') }}');" }}" />
+            <input type="submit" value="{{ _('Delete') }}" onclick="return confirm('{{ _('Are you sure want to delete selected account(s)?') }}');" }}" />
         </span>
     </div>
     {%endif%}
