--- a/iredadmin-ose/templates/default/ldap/users.html
+++ b/iredadmin-ose/templates/default/ldap/users.html
@@ -1,4 +1,4 @@
-{# users, cur_domain, allDomains, showLoginDate, msg #}
+{# users, cur_domain, allDomains, msg #}
 
 {% extends "layout.html" %}
 
@@ -49,18 +49,9 @@ $("#user_list").tablesorter( {
 #}
 
 {% if users is defined %}
-    {% if showLoginDate is sameas true %}
-        {% set time_title = _('Last Login Date') %}
-        {% set time_var = 'lastLoginDate' %}
-    {% else %}
-        {% set time_title = _('Created Date') %}
-        {% set time_var = 'createTimeStamp' %}
-    {% endif %}
-
     {# List all users. #}
     <div class="main-frm">
-    <form name="list_table" id="list_table" action="{{ctx.homepath}}/delete/user" method="post">
-    <input type="hidden" name="domain" value="{{ cur_domain }}" />
+    <form name="list_table" id="list_table" action="{{ctx.homepath}}/users/{{cur_domain}}" method="post">
     <table id="user_list" class="full tablesorter headerSortUp">
         {# Table header. #}
         <thead>
@@ -77,7 +68,6 @@ $("#user_list").tablesorter( {
         {% if users is not string or users |length != 0 %}
             {% for i in users %}
                 {% set entries = i[1] %}
-                {#{% set cn = entries.get('cn', [''])[0].decode('utf-8') %}#}
                 {% set mail = entries.get('mail')[0] |string %}
                 {# If not present, mark as 'disabled'. #}
                 {% set accountStatus = entries.get('accountStatus', ['disabled'])[0] %} 
@@ -110,4 +100,5 @@ $("#user_list").tablesorter( {
     {%endif%}
 </form>
 </div>
+{%endif%}
 {% endblock main %}
