* Bump version number: 0.5.1. * [admin] Fix empty passwd issue.

--- a/iredadmin-ose/templates/default/ldap/user_create.html
+++ b/iredadmin-ose/templates/default/ldap/user_create.html
@@ -18,9 +18,9 @@
 <div class="main-frm">
     <form class="frm-form" method="post" method="{{ctx.homepath}}/create/user">
 
-    <fieldset class="frm-group">
+    <fieldset class="frm-group group1">
         <legend class="group-legend"><strong>{{ _('Mail address') }}</strong></legend>
-        <div class="sf-set">
+        <div class="sf-set set1">
             <div class="sf-box text">
                 <label><span>{{ _('Mail address') }}</span></label>
                 <span class="fld-input"><input type="text" name="username" size="25" />@
