--- a/iredadmin-ose/templates/default/ldap/domain_create.html
+++ b/iredadmin-ose/templates/default/ldap/domain_create.html
@@ -15,9 +15,9 @@
 <div class="main-frm">
 <form class="frm-form" method="post" action="{{ctx.homepath}}/create/domain">
 
-    <fieldset class="frm-group">
+    <fieldset class="frm-group group1">
         <legend class="group-legend"><strong>{{ _('Domain name') }}</strong></legend>
-        <div class="sf-set">
+        <div class="sf-set set1">
             <div class="sf-box text required">
                 <label><span>{{ _('Domain name') }}<em>{{ _('(Required)') }}</em></span></label>
                 <span class="fld-input"><input type="text" name="domainName" size="25" /></span>
