--- a/iredadmin-ose/templates/default/ldap/users.html
+++ b/iredadmin-ose/templates/default/ldap/users.html
@@ -13,7 +13,7 @@ $("#user_list").tablesorter( {
 });
 {% endblock jquery_snippets %}
 
-{# Show search form #}
+{# Show drop-down menu of domain list #}
 {% block id_welcome %}
 <span>{{ _('View users under domain:') }} </span>
 <span>
