--- a/iredadmin-ose/templates/default/ldap/macros.html
+++ b/iredadmin-ose/templates/default/ldap/macros.html
@@ -121,14 +121,14 @@
     </fieldset>
 {%- endmacro %}
 
-{% macro display_reset_password(oldpw='no', confirmpw='yes') -%}
+{% macro display_reset_password(oldpw='', newpw='', confirmpw='', show_oldpw='no', show_confirmpw='yes') -%}
     <fieldset class="frm-group">
         <legend class="group-legend"><strong>Required information</strong></legend>
-        {% if oldpw == 'yes' %}
+        {% if show_oldpw == 'yes' %}
         <div class="sf-set">
             <div class="sf-box text required">
                 <label for="oldpw"><span>{{ _('Old password') }} <em>{{ _('(Required)') }}</em></span></label><br />
-                <span class="fld-input"><input type="password" id="oldpw" name="oldpw" size="35" value=""/></span><br />
+                <span class="fld-input"><input type="password" id="oldpw" name="oldpw" size="35" value="{{oldpw}}"/></span><br />
             </div>
         </div>
         {% endif %}
@@ -136,15 +136,15 @@
         <div class="sf-set">
             <div class="sf-box text required">
                 <label for="newpw"><span>{{ _('New password') }} <em>{{ _('(Required)') }}</em></span></label><br />
-                <span class="fld-input"><input type="password" id="newpw" name="newpw" size="35" value=""/></span><br />
+                <span class="fld-input"><input type="password" id="newpw" name="newpw" size="35" value="{{newpw}}"/></span><br />
             </div>
         </div>
 
-        {% if confirmpw == 'yes' %}
+        {% if show_confirmpw == 'yes' %}
         <div class="sf-set">
             <div class="sf-box text required">
                 <label for="confirmpw"><span>{{ _('Confirm new password') }} <em>{{ _('(Required)') }}</em></span> <small>{{ _('Re-enter your password exactly as before.') }}</small></label><br />
-                <span class="fld-input"><input type="password" id="confirmpw" name="confirmpw" size="35" value=""/></span><br />
+                <span class="fld-input"><input type="password" id="confirmpw" name="confirmpw" size="35" value="{{confirmpw}}"/></span><br />
             </div>
         </div>
         {% endif %}
